@@ -77,8 +77,8 @@ function customstyles_pane_settings_form($style_settings) {
       '#prefix' => '<div class="well">',
       '#suffix' => '</div>',
       '#type' => 'radios',
-			'#title' => t('Add background colors to full-width rows:'),
-			'#description' => t('Background colors work best on full-width rows.'),
+			'#title' => t('Add background color to the entire row:'),
+			'#description' => t('The background color will be applied to the entire row that contains this pane or region.'),
 			'#required' => FALSE,
       '#options' => $bgcolor_options,
       '#default_value' => $bgcolors_default_value,
@@ -105,25 +105,30 @@ function customstyles_pane_settings_form($style_settings) {
     $martop_options = array ( 
 			'' => t('None'),
 			'remove-6-above' => t('Remove 6px margin above'),
-                        'remove-12-above' => t('Remove 12px margin above'),
-                        'remove-28-above' => t('Remove 28px margin above'),
-                        'remove-42-above' => t('Remove 42px margin above'),
-
+			'remove-12-above' => t('Remove 12px margin above'),
+			'remove-28-above' => t('Remove 28px margin above'),
+			'remove-42-above' => t('Remove 42px margin above'),
+			'add-margin-12-above' => t('Add 12px margin above'),
+			'add-margin-28-above' => t('Add 28px margin above'),
+			'add-margin-42-above' => t('Add 42px margin above'),
     );
     $marbot_options = array ( 
 			'' => t('None'),
-                        'remove-6-below' => t('Remove 6px margin below'),
-                        'remove-12-below' => t('Remove 12px margin below'),
-                        'remove-28-below' => t('Remove 28px margin below'),
-                        'remove-42-below' => t('Remove 42px margin below'),
+			'remove-6-below' => t('Remove 6px margin below'),
+			'remove-12-below' => t('Remove 12px margin below'),
+			'remove-28-below' => t('Remove 28px margin below'),
+			'remove-42-below' => t('Remove 42px margin below'),
+			'add-margin-12-below' => t('Add 12px margin below'),
+			'add-margin-28-below' => t('Add 28px margin below'),
+			'add-margin-42-below' => t('Add 42px margin below'),
     ); 
 
    $form['padtop'] = array(
       '#prefix' => '<div class="well">',
       '#suffix' => '</div>',
-                        '#type' => 'radios',
-                        '#title' => t('Adjust the padding on the top'),
-                        '#description' => t(''),
+			'#type' => 'radios',
+			'#title' => t('Adjust the padding on the top'),
+			'#description' => t(''),
       '#options' => $padtop_options,
       '#required' => FALSE,
       '#default_value' => $padtop_default_value,
@@ -132,9 +137,9 @@ function customstyles_pane_settings_form($style_settings) {
    $form['padbot'] = array(
       '#prefix' => '<div class="well">',
       '#suffix' => '</div>',
-                        '#type' => 'radios',
-                        '#title' => t('Adjust the padding on the bottom'),
-      			'#description' => t(''),
+			'#type' => 'radios',
+			'#title' => t('Adjust the padding on the bottom'),
+      '#description' => t(''),
       '#options' => $padbot_options,
       '#required' => FALSE,
       '#default_value' => $padbot_default_value,
@@ -143,9 +148,9 @@ function customstyles_pane_settings_form($style_settings) {
    $form['martop'] = array(
       '#prefix' => '<div class="well">',
       '#suffix' => '</div>',
-                        '#type' => 'radios',
-                        '#title' => t('Adjust the margin on the top'),
-      			'#description' => t(''),
+			'#type' => 'radios',
+			'#title' => t('Adjust the margin on the top'),
+			'#description' => t(''),
       '#options' => $martop_options,
       '#required' => FALSE,
       '#default_value' => $martop_default_value,
@@ -154,9 +159,9 @@ function customstyles_pane_settings_form($style_settings) {
    $form['marbot'] = array(
       '#prefix' => '<div class="well">',
       '#suffix' => '</div>',
-                        '#type' => 'radios',
-                        '#title' =>  t('Adjust the margin on the bottom'),
-      			'#description' => t(''),
+			'#type' => 'radios',
+			'#title' =>  t('Adjust the margin on the bottom'),
+			'#description' => t(''),
       '#options' => $marbot_options,
       '#required' => FALSE,
       '#default_value' => $marbot_default_value,
