@@ -2,7 +2,7 @@ name = Webspark Custom Panel Styles
 description = A CTools Style Plugin that provides custom pane styles.
 core = 7.x
 package = ASU Webspark
-version = 7.x-1.0-dev
+version = 7.x-1.3-dev
 project = webspark_panels_styles
 stylesheets[all][] = plugins/styles/customstyles/css/customstyles.css
 dependencies[] = ctools
