@@ -1,5 +1,5 @@
 name = Webspark WYSIWYG
-description = Overrides the panopoly wysiwyg
+description = Overrides the Panopoly WYSIWYG feature
 core = 7.x
 package = ASU Webspark
 version = 7.x-1.1-dev
@@ -14,8 +14,8 @@ dependencies[] = media_wysiwyg
 dependencies[] = panopoly_wysiwyg
 dependencies[] = wysiwyg_template
 features[defaultconfig][] = user_default_permissions:use text format full_html
-features[defaultconfig][] = user_default_permissions:use text format panopoly_html_text
-features[defaultconfig][] = user_default_permissions:use text format panopoly_wysiwyg_text
+;features[defaultconfig][] = user_default_permissions:use text format panopoly_html_text
+;features[defaultconfig][] = user_default_permissions:use text format panopoly_wysiwyg_text
 features[features_api][] = api:2
 features[features_override_items][] = filter.panopoly_wysiwyg_text
 features[features_override_items][] = image.wysiwyg_template_thumbnail
@@ -42,6 +42,6 @@ features[features_overrides][] = wysiwyg.panopoly_wysiwyg_text.settings|user_cho
 features[filter][] = full_html
 features[user_permission][] = administer filters
 features[user_permission][] = use text format full_html
-features[user_permission][] = use text format panopoly_html_text
-features[user_permission][] = use text format panopoly_wysiwyg_text
+;features[user_permission][] = use text format panopoly_html_text
+;features[user_permission][] = use text format panopoly_wysiwyg_text
 features[wysiwyg_template][] = explore_programs_box
